# gql_games_server

./: Cargo.toml  Dockerfile  Readme.md
src/: database.rs  main.rs  schema.rs
