[package]
name = "game_gql_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.10"
rusqlite = "0.30.0"
actix-web = "4"
actix-cors = "0.6.4"
actix-web-lab = "0.20.1"
env_logger = "0.10.1"
log ="0.4.20"
